@@ -1,6 +1,5 @@
 package com.jve.proyecto.service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,80 +20,62 @@ import com.jve.proyecto.repository.UserRepository;
 public class EvaluacionService {
 
     private final EvaluacionRepository evaluacionRepository;
-    private final ParticipanteRepository participanteRepository;
-    private final PruebaRepository pruebaRepository;
+    private final EvaluacionConverter evaluacionConverter;
     private final UserRepository userRepository;
+    private final PruebaRepository pruebaRepository;
+    private final ParticipanteRepository participanteRepository;
 
-    public EvaluacionService(
-        EvaluacionRepository evaluacionRepository,
-        ParticipanteRepository participanteRepository,
-        PruebaRepository pruebaRepository,
-        UserRepository userRepository
-    ) {
+    public EvaluacionService(EvaluacionRepository evaluacionRepository, EvaluacionConverter evaluacionConverter,UserRepository userRepository, PruebaRepository pruebaRepository,ParticipanteRepository participanteRepository) {
         this.evaluacionRepository = evaluacionRepository;
-        this.participanteRepository = participanteRepository;
-        this.pruebaRepository = pruebaRepository;
+        this.evaluacionConverter = evaluacionConverter;
         this.userRepository = userRepository;
+        this.pruebaRepository = pruebaRepository;
+        this.participanteRepository= participanteRepository;
     }
 
     public List<EvaluacionDTO> obtenerTodas() {
-        List<Evaluacion> evaluaciones = evaluacionRepository.findAll();
-        return evaluaciones.stream().map(this::entityToDto).toList();
-    }
-    public List<EvaluacionDTO> obtenerEvaluacionesPorPrueba(Long pruebaId) {
-        List<EvaluacionDTO> evaluaciones = evaluacionRepository.findByPrueba_IdPrueba(pruebaId).stream()
-            .map(evaluacion -> new EvaluacionDTO(
-                evaluacion.getIdEvaluacion(),
-                evaluacion.getNotaFinal(),
-                evaluacion.getParticipante().getIdParticipante()  
-            ))
-            .collect(Collectors.toList());
-        
-        return evaluaciones;
+        return evaluacionRepository.findAll().stream()
+            .map(evaluacionConverter::entityToDto)
+            .toList();
     }
 
-    
-    public EvaluacionDTO guardarEvaluacion(EvaluacionDTO dto) {
-        Evaluacion evaluacion = dtoToEntity(dto);
-        evaluacion = evaluacionRepository.save(evaluacion);
-        return entityToDto(evaluacion);
+    public List<EvaluacionDTO> obtenerEvaluacionesPorPrueba(Long pruebaId) {
+        return evaluacionRepository.findByPrueba_IdPrueba(pruebaId).stream()
+            .map(evaluacionConverter::entityToDto)
+            .toList();
     }
+    
+    public EvaluacionDTO evaluarParticipante(EvaluacionDTO evaluacionDTO) {
+        Participante participante = participanteRepository.findById(evaluacionDTO.getParticipanteId())
+                .orElseThrow(() -> new RuntimeException("Participante no encontrado"));
+    
+        Prueba prueba = pruebaRepository.findById(evaluacionDTO.getPruebaId())
+                .orElseThrow(() -> new RuntimeException("Prueba no encontrada"));
+    
+        User evaluador = userRepository.findById(evaluacionDTO.getUserId())
+                .orElseThrow(() -> new RuntimeException("Evaluador no encontrado"));
+    
+        Evaluacion evaluacion = evaluacionConverter.dtoToEntity(evaluacionDTO);
+        evaluacion.setParticipante(participante);
+        evaluacion.setPrueba(prueba);
+        evaluacion.setUser(evaluador);
+    
+        return evaluacionConverter.entityToDto(evaluacionRepository.save(evaluacion));
+    }
+    public List<EvaluacionDTO> listarEvaluaciones() {
+        return evaluacionRepository.findAll().stream()
+                .map(evaluacionConverter::entityToDto)
+                .collect(Collectors.toList());
+    }
+  
 
     public EvaluacionDTO actualizarEvaluacion(Long id, EvaluacionDTO dto) {
         return evaluacionRepository.findById(id)
             .map(evaluacion -> {
                 evaluacion.setNotaFinal(dto.getNotaFinal());
                 evaluacionRepository.save(evaluacion);
-                return entityToDto(evaluacion);
+                return evaluacionConverter.entityToDto(evaluacion);
             })
             .orElseThrow(() -> new RuntimeException("Evaluación no encontrada"));
-    }
-
-    private EvaluacionDTO entityToDto(Evaluacion evaluacion) {
-        return new EvaluacionDTO(
-            evaluacion.getIdEvaluacion(),
-            evaluacion.getParticipante().getIdParticipante(),
-            evaluacion.getPrueba().getIdPrueba(),
-            evaluacion.getUser().getIdUser(),
-            evaluacion.getNotaFinal()
-        );
-    }
-
-    private Evaluacion dtoToEntity(EvaluacionDTO dto) {
-        Participante participante = participanteRepository.findById(dto.getParticipanteId())
-                .orElseThrow(() -> new RuntimeException("Participante no encontrado"));
-        Prueba prueba = pruebaRepository.findById(dto.getPruebaId())
-                .orElseThrow(() -> new RuntimeException("Prueba no encontrada"));
-        User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
-
-        return new Evaluacion(
-            dto.getIdEvaluacion(),
-            participante,
-            prueba,
-            user,
-            new ArrayList<>(),
-            dto.getNotaFinal()
-        );
     }
 }
